--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,3 +32,21 @@ jobs:
       - name: Run flake8
         run: |
           flake8 app.py
+
+  testing:
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: code Checkout
+        uses: actions/checkout@v3
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.13' 
+
+      - name: run unit test
+        run: |
+          python -m unittest discover
+          
